public/css/menus.css
div#menu {
   z-index: 1;
   position: fixed;
   left: 0px;
   top: 0px;
   width: 100%;
   height: 100%;
}
div.header {
   width: 100%;
   height: 40px;
   padding: 9px 0px;
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
   font-family: 'Verdana', sans-serif;
   font-size: 16px;
   font-weight: bold;
   z-index: 1000;
}
.headertext {
   margin: 0px;
   position: relative;
   top: 9px;
   color: rgb(255, 255, 255);
   text-align: center;
   font-family: 'Verdana', sans-serif;
   font-size: 16px;
   font-weight: bold;
}
table.menutable {
   width: 100%;
   height: auto;
   margin: 0px;
   padding: 0px;
   background-color: rgb(255, 255, 255);
   opacity: .9;
   border-style: none;
   border-collapse: collapse;
   color: rgb(0, 0, 0);
   font-size: 15pt;
   font-family: Georgia, serif;
}
tr.menurow {
   width: inherit;
   height: 21px;
   margin: 0px;
   padding: 0px;
}
tr.menurow:nth-child(odd) {
   background-color: rgb(255, 255, 255);
}
tr.menurow:nth-child(even) {
   background-color: rgb(240, 240, 240);
}
td.menucell {
   width: 50%;
   margin: 0px;
   padding: 5px;
   border: none;
}
.menuinput {
   width: 100px;
   height: 29px;
   color: rgb(0, 0, 0);
   font-family: serif;
   font-size: 14px;
   text-align: center;

   outline: none;
   background-color: rgb(255, 255, 255);
   border-style: solid;
   border-color: rgb(50, 50, 50);
   border-width: 0px 0px 2px 0px;
   border-radius: 3px;
   box-sizing: border-box;
}
.menuradio {
   width: 16px;
   height: 18px;
   position: relative;
   top: 4px;
   margin: 0px 8px 0px 5px;
   background-color: rgb(255, 255, 255);
   cursor: pointer;

   display: inline-block;
   box-sizing: border-box;
   outline: none;
   border-width: 0px 0px 2px 0px;
   border-style: solid;
   border-color: rgb(0, 0, 0);
   border-radius: 3px;
}
.menuradiotext {
   margin: none;
   display: inline;
   font-family: Georgia, serif;
   color: rgb(0, 0, 0);
}
.menubutton {
   width: 45px;
   height: 22px;
   padding: 0px;
   position: relative;
   top: 2px;
   cursor: pointer;

   background-color: rgb(240, 240, 240);
   border-width: 0px 0px 2px 0px;
   border-radius: 3px;
   border-style: solid;
   border-color: rgb(0, 0, 0);
   outline: none;
   box-sizing: border-box;
}
.menusubmit {
   width: 95px;
   height: 33px;
   margin: 20px 0px 0px 0px;
   padding: 0px;
   position: relative;
   cursor: pointer;
   color: rgb(0, 0, 0);
   font-family: Georgia, serif;
   font-size: 14px;
   font-weight: bold;
   text-align: center;

   outline: none;
   display: block;
   box-sizing: border-box;
   background-color: rgb(240, 240, 240);
   border-width: 0px 0px 2px 0px;
   border-radius: 3px;
   border-color: rgb(0, 0, 0);
   border-style: solid;
}
.menulist {
   cursor: pointer;
}
.menufooter {
   width: 100%;
   height: 30px;
   position: fixed;
   bottom: 0px;
   background-color: rgb(0, 0, 0);
   cursor: pointer;
   color: rgb(255, 255, 255);
   font-family: Verdana, sans-serif;
   font-size: 15px;
}
.menufootertext {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
   margin: 0px 0px 0px 10px;
   color: rgb(255, 255, 255);
   font-family: Verdana, sans-serif;
   font-size: 15px;
}

/* Hide HTML up and down arrows in number input fields */
input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none; /* Chrome & Safari */
}
input[type="number"] {
    -moz-appearance: textfield; /* Firefox */
}
/* Hide HTML down arrow in select (dropdown list) input fields */
select {
    -webkit-appearance: none; /* Chrome & Safari */
    -moz-appearance: none; /* Firefox */
}
select::-ms-expand { /* IE10+ */
    display: none;
}

